# bevy_motion_matching

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
assets/: testing_dataset.json  traj_matching_result.csv
assets/blender/: model_skeleton.blend  model_skeleton.blend1  model_skeleton_glb_mesh_only.blend  model_skeleton_origin.blend1  simple_skeleton.blend
assets/bvh/Idle/: Breathing Idle.bvh  Idle Breathing.bvh  Left Turn 180.bvh  Left Turn 90.bvh  Right Turn 180.bvh  Right Turn 90.bvh
assets/bvh/Jog/: Jog Forward.bvh  Jogging Backwards.bvh  Jogging Forward.bvh  Jogging in Left Circle.bvh  Jogging in Right Circle.bvh  Slow Jogging.bvh  jogging_forward.bvh  jogging_forward_long.bvh
assets/bvh/Run/: Fast Run.bvh  Idle to Sprint.bvh  Run to Right Turn.bvh  Running Backward Right Turn.bvh  Running Forward Arc Left.bvh  Running Forward Arc Right.bvh  Running Jump.bvh  Running Slide.bvh  Running To Turn.bvh  Running and Rolling.bvh  Running backward Left Turn.bvh  Running backwards.bvh  Running.bvh  Sprint.bvh  Turn To Running.bvh
assets/bvh/Walk/: Left Turn With Briefcase.bvh  Right Turn 90.bvh  Standard Walking.bvh  Start Walking.bvh  Stop Walking.bvh  Waking Turn Right 180.bvh  Walk Backwards.bvh  Walk in Left Circle.bvh  Walk in Right Circle.bvh  Walking Backwards.bvh  Walking Left Turn.bvh  Walking Right Turn.bvh  Walking Turn Left 180.bvh  Walking Turn Right 180.bvh  Walking.bvh
assets/bvh_map/: T-Pose.bvh
assets/bvh_not_use/Run/: Running Change Direction.bvh  Running Turn Right 180.bvh  Sprint Turn.bvh
assets/bvh_not_use/Walk/: Walk Backwards.bvh
assets/fbx/: model_skeleton.glb  model_skeleton_glb.fbx  model_skeleton_glb_mesh_only.fbx
assets/fbx/FBX 2013/: model_skeleton.fbx
assets/fbx/Locomotion/: T-Pose NoSkin.fbx  T-Pose.fbx
assets/fbx/Locomotion/Idle/: Breathing Idle.fbx  Left Turn 180.fbx  Left Turn 90.fbx  Right Turn 90.fbx
assets/fbx/Locomotion/Jog/: Jog Backward Left.fbx  Jog Backward Right.fbx  Jog Backward.fbx  Jog Forward.fbx  Jog In Circle Left.fbx  Jog In Circle Right.fbx
assets/fbx/Locomotion/Run/: Run Backward Arc Left.fbx  Run Backward Arc Right.fbx  Run Backward Right.fbx  Run Forward Arc Left.fbx  (+10 more)
assets/glb/: model_skeleton.glb  model_skeleton_mixamo.glb  simple_skeleton.glb  ybot.glb
assets/motion_data/: motion_data.json
crates/bevy_bvh_anim/: Cargo.toml
crates/bevy_bvh_anim/src/: bvh_asset.rs  config.rs  joint_matrices.rs  joint_traits.rs  lib.rs
examples/: movement.rs  quaternion.rs
imported_assets/: log
imported_assets/Default/: traj_matching_result.csv
imported_assets/Default/blender/: model_skeleton.blend  model_skeleton_glb.blend  model_skeleton_glb.blend1
imported_assets/Default/bvh_map/: T-Pose.bvh
imported_assets/Default/glb/: model_skeleton.glb  model_skeleton_mixamo.glb
imported_assets/Default/motion_data/: motion_data.json
src/: action.rs  animation_loader.rs  animation_player.rs  bvh.rs  bvh_library.rs  bvh_manager.rs  camera.rs  character_loader.rs  draw_axes.rs  input_matching.rs  input_trajectory.rs  lib.rs  main.rs  motion.rs  motion_data.rs  motion_data_asset.rs  motion_database.rs  motion_matching.rs  nearest_trajectories.rs  nearest_trajectories_poses_retriever.rs  player.rs  pose_matching.rs  record.rs  scene_loader.rs  testing.rs  trajectory.rs  transform2d.rs  ui.rs  visualization.rs
src/bvh/: bvh_asset.rs  bvh_library.rs  bvh_player.rs
src/bvh_manager/: bvh_gizmos.rs  bvh_library.rs  bvh_player.rs
src/motion/: joint_info.rs  motion_asset.rs  motion_player.rs  pose_data.rs  trajectory_data.rs
src/motion_data/: chunk.rs  motion_data_asset.rs  motion_data_player.rs  pose_data.rs  trajectory_data.rs
src/motion_matching/: kdtree_match.rs  kmeans_match.rs
src/ui/: builder.rs  config.rs  play_mode.rs
(+25 files in other folders)
