[workspace]
resolver = "2"
members = ["crates/*", ]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nixon-voxell/bevy_motion_matching"

[workspace.dependencies]
bevy = { version = "0.14", features = ["asset_processor"] }
bevy_gltf = "0.14"
bevy_egui = "0.28"
serde_json = "1.0"
serde = "1.0"
bvh_anim = "0.4"
thiserror = "1.0"

[workspace.lints.clippy]
redundant_type_annotations = "warn"
bool_comparison = "allow"
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

[package]
name = "bevy_motion_matching"
categories = ["game-engines", "graphics", "gui", "rendering", "multimedia"]
description = "Motion matching system in Bevy."
exclude = ["/assets/", "/.github/", "/examples/"]
keywords = ["motion-matching", "animation", "bevy"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_bvh_anim = { path = "crates/bevy_bvh_anim" }
bevy = { workspace = true }
bevy_gltf = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

egui_extras = "0.28.1"
egui_plot = "0.28.1"
leafwing-input-manager = "0.14"

# debug editor (run with debug feature to enable it)
bevy-inspector-egui = { version = "0.25", optional = true }
kdtree = "0.7.0"

[dev-dependencies]
bevy-inspector-egui = { version = "0.25" }

[lints]
workspace = true

[features]
default = ["bevy/file_watcher"]
debug = ["dep:bevy-inspector-egui"]

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3
